2001-07-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-w3m-dump-source, w3m-w3m-dump-head-source,
	w3m-local-dirlist-cgi): Say where the url is being connected to.

	* w3mhack.el (w3mhack-compile): Changed message convention.
	* w3m.el (w3m-view-source, w3m-rendering-region,
	w3m-w3m-dump-source, w3m-w3m-dump-head-source, w3m-w3m-get-header,
	w3m-local-dirlist-cgi, w3m-fontify): Ditto.
	* w3m-e21.el (w3m-setup-header-line): Ditto.
	* w3m-dtree.el (w3m-about-dtree): Ditto.
	* w3m-bookmark.el (w3m-bookmark-add-current-url,
	w3m-bookmark-add-this-url, w3m-bookmark-add-this-url): Ditto.
	* mime-w3m.el (mime-w3m-mouse-view-this-url): Ditto.

	* w3m.el (w3m-gohome, w3m-convert-ftp-url-for-emacsen,
	w3m-goto-mailto-url, w3m-edit-current-url, w3m-external-view,
	w3m-local-dirlist-cgi, w3m-toggle-inline-images,
	w3m-parse-attributes): Changed error message convention.
	* w3m-hist.el (w3m-history-add-arrived-db, w3m-history-rename-url,
	w3m-history-remove-properties, w3m-history-add-properties,
	w3m-history-plist-put, w3m-history-plist-get): Ditto.
	* w3m-bookmark.el (w3m-bookmark-add, w3m-bookmark-write-file):
	Ditto.

2001-07-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-mbconv-command): New customize variable.
	(w3m-decode-buffer): If charset equal 'x-moe-internal', call
	w3m-x-moe-decode-buffer().
	(w3m-x-moe-decode-buffer): New funcion. A coding-system of
	buffer converts 'x-moe-internal' to usual coding-system for
	emacsen.

	* w3m-form.el (w3m-form-parse-region): If charset equal
	'x-moe-internal', call w3m-x-moe-decode-buffer().
	(w3m-form-parse-forms): Handles value of 'charset', if w3m-type eq
	'w3mmee.

2001-07-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-byte-optimize-letX): Remove
	`pop-up-frame-alist' when compiling.

	* w3m.el (w3m): Use the new macros; set the value of
	`w3m-initial-frame' in the popped up frame.
	(w3m-close-window): Use `w3m-delete-frame-maybe'.
	(w3m-quit): Use `w3m-delete-frame-maybe'.